# career-compass

./: .gitignore  CLAUDE.md  CLAUDE.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  SKILL.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.cursor/skills/career-compass/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_create_user.py  0002_m3_user_data.py
data/: capability_registry.yaml  cross_track.yaml  employer_types.yaml  hiring_eligibility_rules.yaml  industry_graph.yaml  jd_link_rules.yaml  method_patterns.yaml  role_taxonomy.yaml  role_taxonomy_public.yaml  sectors.yaml  skill_aliases.yaml
data/examples/: applications.yaml  constraints.yaml  narrative.md  opportunities.yaml  profile.yaml  sample_jd.txt
data/examples/signals/: trends.yaml
docs/: architecture-users.md  deployment.md  handoff-blank-screen-after-login.md  matching-engine.md  phase-3.md  saas-migration-plan.md  schema-v2.2.md  schema-v2.3.md  schema-v2.md  user-journey.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  MainApp.tsx  index.css  main.tsx
frontend/src/api/: types.ts
frontend/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  UserMenu.tsx  fetchWithAuth.ts  tokens.ts
frontend/src/components/: ChatPanel.tsx  JourneyBar.tsx  OptionalCliPanel.tsx  ViewPanels.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  validation.ts
playbooks/: 1-intake.md  2-scan.md  3-analyze.md  4-plan.md  5-stress-test.md
scripts/: beidou.sh  build-frontend.sh  dev-init.sh  dev-web-sqlite.sh  dev-web.sh  install-cursor-skill.sh  migrate_files_to_db.py  pareto_plot.py
src/career_compass/: __init__.py  cli.py  cross_track.py  eligibility.py  env.py  gather.py  jd_analyze.py  jd_link.py  jobs.py  journey.py  markdown_audit.py  match.py  matrix_feedback.py  pareto.py  pipeline.py  registry.py  render.py  replan.py  scanner.py  schema.py  track.py
src/career_compass/gui/: __init__.py  app.py  chat_ui.py  md.py  platform.py  static_files.py  view_data.py  web_server.py  web_shim.py
src/career_compass/intake/: __init__.py  engine.py  gaps.py  llm.py  preview.py  prompts.py  session.py  writer.py
src/career_compass/web/: __init__.py  app.py  auth.py  db.py  main.py  models.py  repository.py  schemas.py  user_data.py
src/career_compass/web/routers/: __init__.py  data.py  health.py  users.py
templates/: constraints.example.yaml  llm.env.example  opportunities.example.yaml  profile.example.yaml
tests/: conftest.py  test_cli_render.py  test_cross_track.py  test_eligibility.py  test_env.py  test_gui_icon.py  test_gui_md.py  test_gui_platform.py  test_intake.py  test_intake_m2.py  test_jd_link.py  test_jobs.py  test_journey.py  test_markdown_audit.py  test_match.py  test_matrix_feedback.py  test_orthogonal.py  test_pareto.py  test_phase3.py  test_registry.py  test_render.py  test_repository.py  test_scan_plan.py  test_status.py  test_validate.py  test_web_auth.py  test_web_data.py  test_web_server.py
