[project]
name = "career-compass"
version = "0.3.0"
description = "职业生涯决策引擎：画像 × 产业趋势 × 匹配引擎 → 求职定位与执行闭环"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
career-compass = "career_compass.cli:main"
career-compass-app = "career_compass.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui = ["pywebview>=5.4", "markdown>=3.5"]

[dependency-groups]
dev = ["pytest>=8.0"]
gui = ["pywebview>=5.4", "markdown>=3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/career_compass"]

[tool.hatch.build.targets.wheel.force-include]
"src/career_compass/gui/assets" = "career_compass/gui/assets"

[tool.hatch.build.targets.sdist]
include = ["src", "playbooks", "templates", "assets", "SKILL.md"]
