[project]
name = "career-compass"
version = "0.3.0"
description = "Beidou (北斗星): pre-application career decision engine — profile × trends × match → opportunity matrix & execution loop"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
career-compass = "career_compass.cli:main"
career-compass-app = "career_compass.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27", "anyio>=4.3"]
gui = ["pywebview>=5.4", "markdown>=3.5", "anthropic>=0.40", "openai>=1.0"]
llm = ["anthropic>=0.40", "openai>=1.0"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27", "anyio>=4.3"]
gui = ["pywebview>=5.4", "markdown>=3.5", "anthropic>=0.40", "openai>=1.0"]
llm = ["anthropic>=0.40", "openai>=1.0"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/career_compass"]

[tool.hatch.build.targets.wheel.force-include]
"src/career_compass/gui/assets" = "career_compass/gui/assets"
"src/career_compass/gui/static/dist" = "career_compass/gui/static/dist"

[tool.hatch.build.targets.sdist]
include = ["src", "playbooks", "templates", "assets", "SKILL.md"]
